// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpenseSummary with 1 expense 1`] = `
<div>
  <h1>
    Viewing $
    1
     
    expense
     totalling $
    1.23
  </h1>
</div>
`;

exports[`should render ExpenseSummary with multiple expenses 1`] = `
<div>
  <h1>
    Viewing $
    32
     
    expenses
     totalling $
    123,243.24
  </h1>
</div>
`;
